# olympics-mujoco

./: .gitignore  LICENSE  MUJOCO_LOG.TXT  README.md  bug_fixes.md  random_stick_jvrc.npz  test.py  test.txt  解析.md
docs/: basic_knowledge.md  bug_fixes.md  rl_networks.md
examples/: random_npz.py  test.py  test_gym.py  test_jvrc_walk.py  test_model_viewer.py  test_mujoco_xml.py  test_mujoco_xml_by_mushroom_rl.py  test_train.py  test_walk_train.py
examples/evaluate_imitation_learning/: evaluate_save_npz.py  evaluate_viewer.py  npz_plt.py
examples/imitation_learning/: README.md  experiment.py  launcher.py  utils.py
examples/play_walking_trajectory/: test.py
examples/reinforcement_learning_ppo/: rewards.md
imitation_lib/utils/: math.py  (+6 more)
logs_dir/: eval.txt  experiment.pkl  train.txt
olympic_mujoco/: __init__.py
olympic_mujoco/environments/data/jvrc_mj_description/: CMakeLists.txt  README.md
olympic_mujoco/environments/data/jvrc_mj_description/mc_mujoco/: jvrc1.in.yaml
olympic_mujoco/environments/data/jvrc_mj_description/meshes/convex/: L_ANKLE_P_S.stl  L_ELBOW_P_S.stl  L_SHOULDER_P_S.stl  L_SHOULDER_Y_S.stl  L_ULITTLE_S.stl  L_WRIST_Y_S.stl  NECK_P_S.stl  NECK_Y_S.stl  PELVIS_S.stl  R_ANKLE_P_S.stl  R_ELBOW_Y_S.stl  R_HIP_Y_S.stl  R_KNEE_S.stl  R_LINDEX_S.stl  R_LLITTLE_S.stl  R_SHOULDER_P_S.stl  R_UTHUMB_S.stl  R_WRIST_Y_S.stl  WAIST_R_S.stl  WAIST_Y_S.stl
olympic_mujoco/environments/data/jvrc_mj_description/xml/: jvrc1.xml  jvrc1（复件）.xml  scene.xml
saved_npz/: gail_processed_0.npz  gail_unprocessed_0.npz  vail_processed_0.npz  vail_unprocessed_0.npz
(+55 files in other folders)
